--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Unofficial Node.js SDK for fshare.vn",
   "main": "lib/fshare.js",
   "scripts": {
-    "test": "jest",
+    "test": "jest --detectOpenHandles",
     "start": "node lib/fshare.js"
   },
   "repository": {
