--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "cheerio": "^1.0.0-rc.3",
-    "got": "^9.6.0"
+    "request": "^2.88.0",
+    "request-promise": "^4.2.4"
   }
 }
