--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "url": "git+https://github.com/f97/fshare.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Huynh Duc Khoan <huynhduckhoan@gmail.com>",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/f97/fshare/issues"
