--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "fshare",
-  "version": "1.0.0",
+  "name": "fsharedk",
+  "version": "0.0.1",
   "description": "Unofficial Node.js SDK for fshare.vn",
   "main": "lib/fshare.js",
   "scripts": {
