--- a/package.json
+++ b/package.json
@@ -1,29 +1,58 @@
 {
-  "name": "fsharedk",
-  "version": "0.0.2",
-  "description": "Unofficial Node.js SDK for fshare.vn",
-  "main": "lib/fshare.js",
-  "scripts": {
-    "test": "jest --detectOpenHandles",
-    "start": "node lib/fshare.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/f97/fshare.git"
-  },
-  "keywords": [],
-  "author": "Huynh Duc Khoan <huynhduckhoan@gmail.com>",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/f97/fshare/issues"
-  },
-  "homepage": "https://github.com/f97/fshare#readme",
-  "devDependencies": {
-    "jest": "^24.8.0"
-  },
-  "dependencies": {
-    "cheerio": "^1.0.0-rc.3",
-    "request": "^2.88.0",
-    "request-promise": "^4.2.4"
-  }
+    "name": "fsharedk",
+    "version": "0.0.3",
+    "description": "Unofficial Node.js SDK for fshare.vn",
+    "main": "lib/login.js",
+    "scripts": {
+        "test": "jest --detectOpenHandles",
+        "start": "node lib/fshare.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/f97/fshare.git"
+    },
+    "keywords": [],
+    "author": "Huynh Duc Khoan <huynhduckhoan@gmail.com>",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/f97/fshare/issues"
+    },
+    "homepage": "https://github.com/f97/fshare#readme",
+    "dependencies": {
+        "cheerio": "^1.0.0-rc.3",
+        "request": "^2.88.2",
+        "request-promise": "^4.2.5"
+    },
+    "devDependencies": {
+        "eslint": "^6.8.0",
+        "eslint-config-airbnb-base": "^14.0.0",
+        "eslint-plugin-import": "^2.20.1",
+        "jest": "^25.1.0"
+    },
+    "eslintConfig": {
+        "extends": "airbnb-base",
+        "env": {
+            "es6": true,
+            "browser": true
+        },
+        "rules": {
+            "brace-style": [
+                "error",
+                "stroustrup"
+            ],
+            "comma-dangle": [
+                "error",
+                "never"
+            ],
+            "no-unused-vars": [
+                "warn"
+            ],
+            "max-len": [
+                "warn",
+                {
+                    "code": 150
+                }
+            ]
+        }
+    }
 }
